fix: db script Koi name; (fe) create customPagination component, fix farm name overflow

--- a/fe/src/assets/scss/FishCard.module.scss
+++ b/fe/src/assets/scss/FishCard.module.scss
@@ -45,6 +45,13 @@
     }
 }
 
+.card__body__farmName{
+    overflow: hidden; 
+    display: -webkit-box; 
+    -webkit-box-orient: vertical; 
+    -webkit-line-clamp: 1; 
+    line-clamp: 1;
+}
 
 @keyframes shine {
     100% {
